# CircuitPython_RP2040_v4_UCubeSat_Test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.json  main.py  pyproject.toml  repl.py  sonar-project.properties
.github/workflows/: ci.yaml
lib/: requirements.txt
src/flight-software/: main.py  repl.py
src/flight-software/lib/arducam/: Arducam.py
src/flight-software/lib/proveskit_rp2040_v4/: register.py
src/ground-station/: main.py  repl.py
src/ground-station/lib/: requirements.txt
typings/: board.pyi  gc.pyi
