[project]
name = "proveskit-circuitpython-rp2040-v4"
version = "1.0.0"
description = "PROVESKIT Software RP2040 v4 board"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "adafruit-circuitpython-typing==1.12.1",
    "circuitpython-stubs==9.2.8",
    "pre-commit==4.2.0",
    "pyright[nodejs]==1.1.402",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pyright]
include = [
    "src/flight-software/boot.py",
    "src/flight-software/main.py",
    "src/flight-software/repl.py",
    "src/flight-software/safemode.py",
    "src/flight-software/lib/proveskit_rp2040_v4/*",
    "src/ground_station/boot.py",
    "src/ground_station/main.py",
    "src/ground_station/repl.py",
    "src/ground_station/safemode.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "artifacts",
    "src/*/lib",
    "typings",
]
stubPath = "./typings"
reportMissingModuleSource = false
